2006-03-25  Shawn Betts  <sabetts@vcn.bc.ca>

	* input.lisp (code-state->key): use #\Null if no keysym to char mapping exists.

	* user.lisp (*root-map*): bind C-g to abort, not g.
	(send-meta-key): don't send a key if there's no current window
	(other-window): display an error message when no other window can be selected

	* core.lisp (handle-keymap): accept a code and state. read the
	next key when its a keymap. return the key sequence for the
	command.
	(:key-press): call display-force-output after ungrabbing the
	pointer and keyboard. do not lookup the command. print the key
	sequence if no command was found.

	* stumpwm.lisp (stumpwm): give display-str a default value.

2006-03-24  Shawn Betts  <sabetts@vcn.bc.ca>

	* stumpwm.lisp (stumpwm): remove &key

	* input.lisp (read-one-line): remove done var

	* core.lisp (*top-map*): moved from user.lisp
	(tree-x): dont accept a screen arg. all callers updated.
	(tree-y): likewise
	(tree-width): likewise
	(tree-height): likewise
	(tree-row-split): likewise
	(tree-column-split): likewise
	(expand-tree): likewise
	(join-subtrees): likewise
	(remove-frame): likewise

2006-03-10  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (remove-split): sync all frames
	("resize"): new command
	(*root-map*): bind "Space" not " "

	* core.lisp (tree-iterate): new function
	(join-subtrees): tighten up code
	(depth-first-search): new function
	(spree-root-branch): likewise
	(resize-frame): likewise

2006-03-03  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): bind "c" to "exec xterm". bind "other" to C-t

	* kmap.lisp (parse-char-name): return the char-code

	* input.lisp (code-state->key): store char as a char-code. all callers updated.

	* core.lisp (:key-press): make sure cmd isn't nil

2006-03-02  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (ungrab-keys-on-window): pass :any correctly.
	(grab-keys-on-window): grab all keybindings in *top-map*
	(sync-keys): new defun
	(handle-keymap): new defun